[package]
name = "kalfje"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "time"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tabled = "0.15.0"